--- a/index.html
+++ b/index.html
@@ -49,9 +49,37 @@
      <div class="product-main">
         <div class="heading"><h2>Smart glasses</h2></div>
         <div class="card-container">
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
+          <div class="card">
+            <div class="card-img">
+              <img src="Image/sunglass.svg" alt="">
+            </div>
+            <div class="card-content">
+              <h1>Eyeglass</h1>
+              <p>smart, Affordable <br> and Eligant</p>
+              <h1>$25</h1>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="Image/sunglass.svg" alt="">
+            </div>
+            <div class="card-content">
+              <h1>Eyeglass</h1>
+              <p>smart, Affordable <br> and Eligant</p>
+              <h1>$25</h1>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="Image/sunglass.svg" alt="">
+            </div>
+            <div class="card-content">
+              <h1>Eyeglass</h1>
+              <p>smart, Affordable <br> and Eligant</p>
+              <h1>$25</h1>
+            </div>
+          </div>
+         
         </div>
       </div>
     </div>
