update the home page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="hero-right">
         <div class="sub-image1">
-          <img src="" alt="">
+          <img src="Image/hero-image.svg" alt="">
         </div>
         <div class="hero-right-main">
           <img src="Image/Untitled design.svg" alt="">
@@ -142,12 +142,12 @@
             <img src="Image/hearing.jpeg" alt="">
           </div>
           <div class="info">
-            <h2>Glasses for deaf <br> & Hard of hearing </h2>
+            <h2>Glasses for Blind </h2>
             <ul>
-              <li>Petented dome bone conduction transducer
+              <li>object & Face Recognition 
               </li>
-              <li>Array of Microphones </li>
-              <li>Bluetooth & rechargeable</li>
+              <li>1080p front camera  </li>
+              
             </ul>
           </div>
         </div>
@@ -158,12 +158,12 @@
             <img src="Image/sound.jpeg" alt="">
           </div>
           <div class="info">
-            <h2>Glasses for deaf <br> & Hard of hearing </h2>
+            <h2>Glasses for mute </h2>
             <ul>
-              <li>Petented dome bone conduction transducer
+              <li>Real time sing language to audio conversion 
               </li>
-              <li>Array of Microphones </li>
-              <li>Bluetooth & rechargeable</li>
+              <li>piars of side camera & speaker  </li>
+              <li>offline processing </li>
             </ul>
           </div>
         </div>
@@ -232,7 +232,7 @@
         <ul>
           <li>
             <p>Mail</p>
-            <p>vikaspal9123@gmail.com</p>
+            <p>xyl9123@gmail.com</p>
           </li>
           <li>
             <p>Phone Number </p>
